--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
   dio: ^5.3.2
+  equatable: ^2.0.5
   fl_chart: ^0.63.0
   flutter:
     sdk: flutter
