--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   fl_chart: ^0.63.0
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.3
   flutter_svg: ^2.0.7
   font_awesome_flutter: ^10.5.0
   go_router: ^10.0.0
